--- a/.eslintrc
+++ b/.eslintrc
@@ -1,9 +1,21 @@
 {
-    "parserOptions": {
-        "ecmaVersion": 2017
-    },
-
     "env": {
-        "es6": true
+      "commonjs": true,
+      "es6": true,
+      "node": true
+    },
+    "globals": {
+      "Atomics": "readonly",
+      "SharedArrayBuffer": "readonly"
+    },
+    "parserOptions": {
+      "ecmaVersion": 2018
+    },
+    "rules": {
+      "no-underscore-dangle": "off",
+      "no-case-declarations": "off",
+      "global-require": "off",
+      "class-methods-use-this": "off",
+      "import/no-dynamic-require": "off"
     }
-}
+  }
